--- a/Project/Source/Presentation/Kanji/Kanji.storyboard
+++ b/Project/Source/Presentation/Kanji/Kanji.storyboard
@@ -12,7 +12,7 @@
         <!--Kanji-->
         <scene sceneID="Pvj-Rq-9Ge">
             <objects>
-                <viewController id="0Jx-Qk-7Zs" customClass="KanjiViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="KanjiViewController" id="0Jx-Qk-7Zs" customClass="KanjiViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NQr-yD-oRC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
