--- a/Project/Source/ReusableViews/Views/PushElements/PushElement.xib
+++ b/Project/Source/ReusableViews/Views/PushElements/PushElement.xib
@@ -29,8 +29,8 @@
                         <fragment content="漢字">
                             <attributes>
                                 <color key="NSColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <font key="NSFont" size="89" name=".AppleSimplifiedChineseFont-Bold"/>
-                                <font key="NSOriginalFont" size="89" name=".AppleSimplifiedChineseFont-Bold"/>
+                                <font key="NSFont" metaFont="system" size="89"/>
+                                <font key="NSOriginalFont" metaFont="system" size="89"/>
                                 <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="truncatingTail" baseWritingDirection="rightToLeft" tighteningFactorForTruncation="0.0"/>
                             </attributes>
                         </fragment>
