--- a/Project/Source/Presentation/Detail/SearchDetail/SearchDetail.storyboard
+++ b/Project/Source/Presentation/Detail/SearchDetail/SearchDetail.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XMH-pU-N1L">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,17 +9,48 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Search Detail View Controller-->
         <scene sceneID="wUG-jG-bol">
             <objects>
-                <viewController id="XMH-pU-N1L" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SearchDetailViewController" id="XMH-pU-N1L" customClass="SearchDetailViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="En7-1K-7Jt">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="q0f-87-9kw">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="q0f-87-9kw">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="yzE-lP-F20" customClass="SearchDetailTableViewCell" customModule="Project" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yzE-lP-F20" id="ZzW-nw-Brv">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kanji" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VI8-2n-Deb">
+                                                    <rect key="frame" x="20" y="11" width="374" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="VI8-2n-Deb" secondAttribute="bottom" id="76p-TS-unF"/>
+                                                <constraint firstItem="VI8-2n-Deb" firstAttribute="trailing" secondItem="ZzW-nw-Brv" secondAttribute="trailingMargin" id="Awv-zz-u88"/>
+                                                <constraint firstItem="VI8-2n-Deb" firstAttribute="leading" secondItem="ZzW-nw-Brv" secondAttribute="leadingMargin" id="aQd-DZ-uxa"/>
+                                                <constraint firstItem="VI8-2n-Deb" firstAttribute="top" secondItem="ZzW-nw-Brv" secondAttribute="topMargin" id="j9F-Bd-4vh"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="kanjiLabel" destination="VI8-2n-Deb" id="67X-QD-To6"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="XMH-pU-N1L" id="eW4-BI-XyI"/>
+                                    <outlet property="delegate" destination="XMH-pU-N1L" id="zpF-v2-8lw"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="8Wi-5p-aUN"/>
@@ -31,10 +62,13 @@
                             <constraint firstItem="q0f-87-9kw" firstAttribute="top" secondItem="8Wi-5p-aUN" secondAttribute="top" id="LHd-X9-gEI"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="q0f-87-9kw" id="YdY-mz-x15"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7fN-Rt-eLB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="332" y="16"/>
+            <point key="canvasLocation" x="331.8840579710145" y="15.401785714285714"/>
         </scene>
     </scenes>
     <resources>
