--- a/Project/Source/ReusableViews/Views/PushElements/PushElement.xib
+++ b/Project/Source/ReusableViews/Views/PushElements/PushElement.xib
@@ -16,13 +16,12 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="jl0-5p-TS5">
-            <rect key="frame" x="0.0" y="0.0" width="192" height="358"/>
+            <rect key="frame" x="0.0" y="0.0" width="192" height="286"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="WUt-yl-euW">
-                    <rect key="frame" x="92" y="16" width="84" height="211"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="WUt-yl-euW">
+                    <rect key="frame" x="92" y="16" width="84" height="212.5"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="211" id="Gbx-g1-Kwh"/>
                         <constraint firstAttribute="width" constant="84" id="Gr9-6B-bpM"/>
                     </constraints>
                     <attributedString key="attributedText">
@@ -37,8 +36,11 @@
                     </attributedString>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Иероглифы" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dxl-ul-Blp">
-                    <rect key="frame" x="16" y="310" width="160" height="32"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Иероглифы" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Dxl-ul-Blp">
+                    <rect key="frame" x="16" y="245" width="160" height="25"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="25" id="hLr-pl-zcC"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
@@ -47,6 +49,7 @@
             <viewLayoutGuide key="safeArea" id="US1-Ac-LcI"/>
             <color key="backgroundColor" red="0.10980392160000001" green="0.58823529409999997" blue="0.41568627450000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="Dxl-ul-Blp" firstAttribute="top" relation="greaterThanOrEqual" secondItem="WUt-yl-euW" secondAttribute="bottom" constant="10" id="1JD-kF-94O"/>
                 <constraint firstItem="Dxl-ul-Blp" firstAttribute="leading" secondItem="US1-Ac-LcI" secondAttribute="leading" constant="16" id="9Pu-Bc-HWy"/>
                 <constraint firstItem="US1-Ac-LcI" firstAttribute="trailing" secondItem="WUt-yl-euW" secondAttribute="trailing" constant="16" id="Fs5-mY-VMU"/>
                 <constraint firstItem="US1-Ac-LcI" firstAttribute="trailing" secondItem="Dxl-ul-Blp" secondAttribute="trailing" constant="16" id="Idm-Gj-zLC"/>
@@ -59,7 +62,7 @@
                     <integer key="value" value="10"/>
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
-            <point key="canvasLocation" x="-56.521739130434788" y="89.0625"/>
+            <point key="canvasLocation" x="-56.521739130434788" y="64.955357142857139"/>
         </view>
     </objects>
 </document>
